<resources>
    <string name="app_name">TaskManager</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="type_in_a_name">Type in a name</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="skip">Skip</string>
    <string name="null_toast">Title and desc cannot be empty</string>
    <string name="update">Update</string>
    <string name="your_name">Your name</string>
    <string name="choose_image">Choose image</string>
    <string name="edit_profile">Edit profile</string>
    <string name="fill">Fill</string>
    <string name="google">GOOGLE</string>
</resources>