<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.taskmanager.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.taskmanager.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.taskmanager.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_task"
        android:name="com.example.taskmanager.ui.task.TaskFragment"
        android:label="Task"
        tools:layout="@layout/fragment_task">
        <argument
            android:name="task"
            android:defaultValue="@null"
            app:argType="com.example.taskmanager.model.Task"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.taskmanager.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_onboard"
        android:name="com.example.taskmanager.ui.onboard.OnBoardFragment"
        android:label="fragment_on_board"
        tools:layout="@layout/fragment_on_board" />
    <fragment
        android:id="@+id/navigation_redactor_profile"
        android:name="com.example.taskmanager.ui.profileredactor.ProfileRedactorFragment"
        android:label="fragment_profile_redactor"
        tools:layout="@layout/fragment_profile_redactor" />
</navigation>